[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "css-parser"
dynamic = ["version"]
description = "A CSS Cascading Style Sheets library for Python"
readme = "README.md"
license = "LGPL-3.0-or-later"
authors = [
    {name = "Various People", email = "redacted@anonymous.net"},
]
keywords = ["CSS", "Cascading Style Sheets", "CSSParser", "DOM Level 2 Stylesheets", "DOM Level 2 CSS"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: HTML",
]

[project.urls]
Homepage = "https://github.com/ebook-utils/css-parser"

[tool.setuptools.dynamic]
version = {attr = "css_parser.version.VERSION"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
